--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>
             <div class="node">
                 <!--
-                <img src="image\pp.png" alt="Nature Icon" class="icon">
+                <img src="pp.png" alt="Nature Icon" class="icon">
                 <div class="node-content">
                     <span class="label">Ram Naresh Pathak</span>
                     <span class="dob">#</span>
