--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 -->
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Ram Naresh Pathak</span>
                                             <span class="dob">#</span>
