--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li>
             <div class="node">
                 <!--
-                <img src="pp.png" alt="Nature Icon" class="icon">
+                <img src="image\pp.png" alt="Nature Icon" class="icon">
                 <div class="node-content">
                     <span class="label">Ram Naresh Pathak</span>
                     <span class="dob">#</span>
@@ -24,7 +24,7 @@
                 -->
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image/pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Ram Naresh Pathak</span>
                                             <span class="dob">#</span>
@@ -33,7 +33,7 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Jaharaa Pathak</span>
                                             <span class="dob">#</span>
@@ -66,7 +66,7 @@
                         -->
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Dharam Chandra Pathak</span>
                                             <span class="dob">#</span>
@@ -75,7 +75,7 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Gyanmati Pathak</span>
                                             <span class="dob">#</span>
@@ -109,7 +109,7 @@
 
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Sanjeev Pathak</span>
                                             <span class="dob">#</span>
@@ -118,7 +118,7 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Sanjeev Wife</span>
                                             <span class="dob">#</span>
@@ -170,7 +170,7 @@
                     <div class="node">
                         <div class="node-pair">
                             <div class="node">
-                                <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                <img src="image\pp.png" alt="Flower Icon" class="icon">
                                 <div class="node-content">
                                     <span class="label">Harish Chandra Pathak</span>
                                     <span class="dob">#</span>
@@ -179,7 +179,7 @@
                             </div>
                             <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                             <div class="node">
-                                <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                <img src="image\pp.png" alt="Flower Icon" class="icon">
                                 <div class="node-content">
                                     <span class="label">Shakuntala Pathak</span>
                                     <span class="dob">#</span>
@@ -213,7 +213,7 @@
                                 -->
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Prabhakar Pathak</span>
                                             <span class="dob">13-11-1986</span>
@@ -222,7 +222,7 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Garima Pathak</span>
                                             <span class="dob">#</span>
@@ -282,7 +282,7 @@
 
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Subhash Chandra Pathak</span>
                                             <span class="dob">#</span>
@@ -291,9 +291,9 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
-                                            <span class="label">Subhash Chandra Wife</span>
+                                            <span class="label">Madhuri Pathak</span>
                                             <span class="dob">#</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
@@ -335,7 +335,7 @@
 
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Ashutosh Pathak(Anshu)</span>
                                             <span class="dob">#</span>
@@ -344,7 +344,7 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Roli Pathak</span>
                                             <span class="dob">#</span>
@@ -385,7 +385,7 @@
 
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Ram Nath Pathak</span>
                                             <span class="dob">#</span>
@@ -394,9 +394,9 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
-                                            <span class="label">Ram Nath Wife</span>
+                                            <span class="label">Mithesesh Pathak</span>
                                             <span class="dob">#</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
@@ -417,7 +417,7 @@
                                 -->
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Arvind Pathak</span>
                                             <span class="dob">#</span>
@@ -426,7 +426,7 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Romi Pathak</span>
                                             <span class="dob">#</span>
@@ -486,7 +486,7 @@
                                 <img src="tulip-icon.png" alt="Tulip Icon" class="icon">
                                 <div class="node-content">
                                     <span class="label">Atul Pathak</span>
-                                    <span class="dob">#</span>
+                                    <span class="dob">04-03-1998 10:10 PM</span>
                                     <!--<span class="dod">#</span>-->
                                 </div>
                             </div>
@@ -516,7 +516,7 @@
                         -->
                                 <div class="node-pair">
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Pream Chandra Pathak</span>
                                             <span class="dob">#</span>
@@ -525,9 +525,9 @@
                                     </div>
                                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
                                     <div class="node">
-                                        <img src="Image\pp.png" alt="Flower Icon" class="icon">
+                                        <img src="image\pp.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
-                                            <span class="label">Pream Chandra Wife</span>
+                                            <span class="label">Shakuntala Pathak</span>
                                             <span class="dob">#</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
