--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pathak Family Tree</title>
+    <title>पाठकवंशवृक्षः</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Favicon icon  -->
+    <link rel="icon" type="image/png" sizes="16x16" href="Image/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Image/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="Image/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Image/apple-touch-icon.png">
 </head>
 <body>
     <!-- Popup Window -->
@@ -87,7 +92,7 @@
         <button id="toggle-all" class="toggle-button">Expand All</button>
         <button id="about-us" class="about-button">About Us</button>
     </div>
-
+<span class="blink" align="top">✨ नीचे दिए गए प्रत्येक नोड पर क्लिक करके आप "पाठकवंशवृक्षः" में व्यक्तियों से जुड़ी पीढ़ियों को देख सकते हैं.......✨ </span>
 <ul class="tree">
     <!-- Great-Great-Great-Grandparents of Shree Ram and Shree Ram Wife -->
     <li>
@@ -134,7 +139,8 @@
                             <img src="Image/Male.png" alt="Kalicharan" class="icon">
                             <div class="node-content">
                                 <span class="label">Kalicharan Pathak</span>
-                                <span class="dob">#</span>
+                                <span class="dob">Unknown</span>
+                                <span class="dod">Unknown</span>
                             </div>
                         </div>
                         <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
@@ -142,7 +148,8 @@
                             <img src="Image/Female.png" alt="Kalicharan Wife" class="icon">
                             <div class="node-content">
                                 <span class="label">Kalicharan Wife</span>
-                                <span class="dob">#</span>
+                                <span class="dob">Unknown</span>
+                                <span class="dod">Unknown</span>
                             </div>
                         </div>
                     </div>
@@ -157,7 +164,8 @@
                             <img src="Image/Male.png" alt="Bhairav Pathak" class="icon">
                             <div class="node-content">
                                 <span class="label">Bhairav Pathak</span>
-                                <span class="dob">#</span>
+                                <span class="dob">Unknown</span>
+                                <span class="dod">Unknown</span>
                             </div>
                         </div>
                         <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
@@ -165,7 +173,8 @@
                             <img src="Image/Female.png" alt="Bhairav Pathak Wife" class="icon">
                             <div class="node-content">
                                 <span class="label">Bhairav Pathak Wife</span>
-                                <span class="dob">#</span>
+                                <span class="dob">Unknown</span>
+                                <span class="dod">Unknown</span>
                             </div>
                         </div>
                     </div>
@@ -180,7 +189,8 @@
                             <img src="Image/Male.png" alt="Grandfather Icon" class="icon">
                             <div class="node-content">
                                 <span class="label">Shree Ram Pathak</span>
-                                <span class="dob">#</span>
+                                <span class="dob">Unknown</span>
+                                <span class="dod">Unknown</span>
                             </div>
                         </div>
                         <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
@@ -188,7 +198,8 @@
                             <img src="Image/Female.png" alt="Grandmother Icon" class="icon">
                             <div class="node-content">
                                 <span class="label">Shree Ram Pathak Wife</span>
-                                <span class="dob">#</span>
+                                <span class="dob">Unknown</span>
+                                <span class="dod">Unknown</span>
                             </div>
                         </div>
                     </div>
@@ -203,7 +214,8 @@
                         <img src="Image/Ram Aadhar.png" alt="Ram Aadhar Pathak" class="icon">
                         <div class="node-content">
                             <span class="label">Ram Aadhar Pathak</span>
-                            <span class="dob">#</span>
+                            <span class="dob">Unknown</span>
+                            <span class="dod">Unknown</span>
                         </div>
                     </div>
                     <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
@@ -211,7 +223,8 @@
                         <img src="Image/Female.png" alt="Eshwar devi" class="icon">
                         <div class="node-content">
                             <span class="label">Eshwar devi</span>
-                            <span class="dob">#</span>
+                            <span class="dob">Unknown</span>
+                            <span class="dod">Unknown</span>
                         </div>
                     </div>
                 </div>
@@ -225,7 +238,8 @@
                                 <img src="Image/Ramnaresh.png" alt="Flower Icon" class="icon">
                                 <div class="node-content">
                                     <span class="label">Ramnaresh Pathak</span>
-                                    <span class="dob">#</span>
+                                    <span class="dob">Unknown</span>
+                                    <span class="dod">Unknown</span>
                                 </div>
                             </div>
                             <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
@@ -233,7 +247,8 @@
                                 <img src="Image/Jaharaa.png" alt="Flower Icon" class="icon">
                                 <div class="node-content">
                                     <span class="label">Jaharaa Pathak</span>
-                                    <span class="dob">#</span>
+                                    <span class="dob">Unknown</span>
+                                    <span class="dod">Unknown</span>
                                 </div>
                             </div>
                         </div>
@@ -266,7 +281,7 @@
                                         <img src="Image\Dharamchandra.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Dharamchandra Pathak</span>
-                                            <span class="dob">1957</span>
+                                            <span class="dob">12-07-1957</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
                                     </div>
@@ -317,7 +332,7 @@
                                     <div class="node">
                                         <img src="Image\Lata.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
-                                            <span class="label">Lata Pathak (Roli)</span>
+                                            <span class="label">Lata Pathak (Rinki)</span>
                                             <span class="dob">02-02-1991</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
@@ -380,7 +395,7 @@
                                 <div class="node-content">
                                     <span class="label">Shakuntala Pathak</span>
                                     <span class="dob">#</span>
-                                    <!--<span class="dod">#</span>-->
+                                    <span class="dod">01-05-2021 06:00 AM</span>
                                 </div>
                             </div>
 
@@ -413,7 +428,7 @@
                                         <img src="Image\Prabhakar.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Prabhakar Pathak</span>
-                                            <span class="dob">13-11-1986</span>
+                                            <span class="dob">13-11-1986 04:10 AM</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
                                     </div>
@@ -422,7 +437,7 @@
                                         <img src="Image\Garima.png" alt="Flower Icon" class="icon">
                                         <div class="node-content">
                                             <span class="label">Garima Pathak</span>
-                                            <span class="dob">06-08-1989</span>
+                                            <span class="dob">06-08-1988</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
                                     </div>
