--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <button id="about-us" class="about-button">About Us</button>
     </div>
 <span class="blink" align="top">✨ नीचे दिए गए प्रत्येक नोड पर क्लिक करके आप "पाठकवंशवृक्षः" में व्यक्तियों से जुड़ी पीढ़ियों को देख सकते हैं.......✨ </span>
+<div class="tree-wrapper">
 <ul class="tree">
     <!-- Great-Great-Great-Grandparents of Shree Ram and Shree Ram Wife -->
     <li>
@@ -793,6 +794,7 @@
 </ul>
     </li>
 </ul>
+</div>
  <!-- Copyright Footer -->
     <footer>
        
