--- a/index.html
+++ b/index.html
@@ -771,12 +771,25 @@
                         <ul>
                             <li>
                                 <div class="node">
-                                    <img src="Image\Sudhanshu.png" alt="Rose Icon" class="icon">
-                                    <div class="node-content node living Male">
-                                        <span class="label">Sudhanshu Pathak(Sonu)</span>
-                                        <span class="dob">25-06-1994</span>
-                                        <!--<span class="dod">#</span>-->
+                                    <div class="node-pair" title="DOM:19-02-2026">
+                                    <div class="node">
+                                        <img src="Image\Sudhanshu.png" alt="Flower Icon" class="icon">
+                                        <div class="node-content node living Male">
+                                            <span class="label">Sudhanshu Pathak(Sonu)</span>
+                                            <span class="dob">25-06-1994</span>
+                                            <!--<span class="dod">#</span>-->
+                                        </div>
                                     </div>
+                                    <span class="bonding-symbol">🔗</span> <!-- Unicode heart symbol -->
+                                    <div class="node">
+                                        <img src="Image\Manisha.png" alt="Flower Icon" class="icon">
+                                        <div class="node-content node living Female">
+                                            <span class="label">Manisha Pathak</span>
+                                            <span class="dob">#</span>
+                                            <!--<span class="dod">#</span>-->
+                                        </div>
+                                    </div>
+                                </div>
                                 </div>
                             </li>
                             <li>
@@ -824,3 +837,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
