--- a/index.html
+++ b/index.html
@@ -691,6 +691,16 @@
                                             </div>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="node">
+                                            <img src="Image\Anay.png" alt="Rose Icon" class="icon">
+                                            <div class="node-content node living Male">
+                                                <span class="label">Anay Pathak</span>
+                                                <span class="dob">04-02-2026 09:21 AM</span>
+                                                <!--<span class="dod">#</span>-->
+                                            </div>
+                                        </div>
+                                    </li>
                                 </ul>
 
                         </li>
@@ -785,7 +795,7 @@
                                         <img src="Image\Manisha.png" alt="Flower Icon" class="icon">
                                         <div class="node-content node living Female">
                                             <span class="label">Manisha Pathak</span>
-                                            <span class="dob">#</span>
+                                            <span class="dob">20-09-1996</span>
                                             <!--<span class="dod">#</span>-->
                                         </div>
                                     </div>
@@ -837,4 +847,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
